<resources>
    <string name="app_name">Device Info</string>
    <string name="close">Close</string>
    <string name="title_section1">Main Info</string>
    <string name="title_section2">Dashboard</string>
    <string name="action_satellites">Show Satellites</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_main_info">Main Info</string>
    <string name="title_activity_cpu_info">CPU Information</string>
    <string name="title_activity_battery_info">Battery Information</string>
    <string name="title_activity_siminfo">Phone Information</string>
    <string name="title_activity_nmeafeed">NMEA feed</string>
    <string name="title_activity_sensor_list">Available Sensors</string>
    <string name="title_activity_sensor_detail">Sensor Readings</string>
    <string name="title_activity_display_info">Display Information</string>
    <string name="title_activity_build_properties">Device Build Properties</string>
    <string name="connected_info">Connected</string>
    <string name="available_info">Available</string>
    <string name="not_available_info">Not Available</string>
    <string name="error">Error</string>
    <string name="not_available_in_API">Not available in API:</string>
    <string name="not_present">Not Present</string>
    <string name="activity_title_gps_information">GPS Information</string>
    <string name="title_activity_network_info">Network Information</string>
    <string name="title_activity_storage_info">Storage Information</string>
    <string name="title_activity_camera_info">Camera Information</string>
    <string name="title_activity_about">About Device Info</string>
    <string name="yes_string">YES</string>
    <string name="no_string">NO</string>
    <string name="new_version_title">New Version Available</string>
    <string name="new_version_content">Update to new version to get all new features and crash fixes.</string>
    <string name="update">Update</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="rateit">Rate Now</string>
    <string name="no_thanks">Later</string>
    <string name="cancel">Cancel</string>
    <string name="show_buildprop">Device Properties</string>
    <string name="request_perm">Request</string>
    <string name="shareTextEmpty">No info available yet</string>
    <string name="shareTextTitle1">**********************************</string>
    <string name="exit_msg">Do you want to exit?</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_app_new_feature">App Review</string>
    <string name="rate_app">Submit App Review</string>
    <string name="feedback_subject">Device Info Feedback</string>
    <string name="version_text">Version:</string>
    <string name="app_description">Device Info is an application which queries data from android device and obtain HW features which are normally not available through user interface. It contains several modules visible from main menu. Device Info application also offers a possibility to test GPS and network using ping command.\n\nGoogle Play and the Google Play logo are trademarks of Google LLC.</string>
    <string name="app_author">Device Info by pacmac 2020.</string>
    <string name="rta_dialog_message">If you like using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="cam_permission_msg">Camera permission is currently disabled. To be able to obtain camera parameters you need to accept camera permission.</string>
    <string name="phone_permission_msg">Read phone state permission is currently disabled. To be able to access SIM and mobile network status you need to accept this permission. You can revoke permission anytime from phone Settings.</string>
    <string name="phone_number_permission_msg">To display phone number you need to grant special permission for the app to READ PHONE NUMBERS. You can revoke permission anytime from phone Settings.</string>
    <string name="location_permission_msg">Location permission is required in order to display information about GPS and mobile network environment.</string>
    <string name="storage_permission_msg">Storage permission is currently disabled. To be able to read storage capacity you need to accept this permission.</string>
    <string name="location_feature_disabled">This feature is disabled as it requires Location Permission. You have previously rejected to grant this permission twice so if you wish to use this feature you will have to navigate to Device Settings and enable permission manually for Device Info app.</string>
    <string name="camera_feature_disabled">This feature is disabled as it requires Camera Permission. You have previously rejected to grant this permission twice so if you wish to use this feature you will have to navigate to Device Settings and enable permission manually for Device Info app.</string>
    <string name="storage_feature_disabled">This feature is disabled as it requires Storage Permission. You have previously rejected to grant this permission twice so if you wish to use this feature you will have to navigate to Device Settings and enable permission manually for Device Info app.</string>
    <string name="phone_feature_disabled">This feature is disabled as it requires Read Phone State Permission. You have previously rejected to grant this permission twice so if you wish to use this feature you will have to navigate to Device Settings and enable permission manually for Device Info app.</string>
    <string name="what_is_new">What is new</string>
    <string name="new_features1">Dark Mode Support</string>
    <string name="new_features2">UI Updated</string>
    <string name="new_features3">Improved Permission Handling</string>
    <string name="new_features4">Added Phone Number to Main Info</string>
    <string name="new_features5">- Improved stability</string>
    <string name="title_activity_cellular_info">Cellular Info</string>
    <string name="cell_phone_sim_tab">SIM</string>
    <string name="cell_network_tab">Network</string>
    <string name="cell_info_tab">Cell</string>
    <string name="carrier_config_tab">Config</string>
    <string name="supported">Supported</string>
    <string name="not_supported">Not Supported</string>
    <string name="networkID">Network Id</string>
    <string name="systemID">System Id</string>
    <string name="baseStation">Base Station Id</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="mcc">MCC</string>
    <string name="mnc">MNC</string>
    <string name="cid">Cell ID</string>
    <string name="nci">New Radio 5G Cell Identity</string>
    <string name="lac">Location Area Code</string>
    <string name="psc">Primary Scrambling Code</string>
    <string name="tracking_area_code">Tracking Area Code</string>
    <string name="pci">Physical Cell ID</string>
    <string name="earfcn">EARFCN</string>
    <string name="eutran_band">EUTRAN BAND</string>
    <string name="uarfcn">UARFCN</string>
    <string name="nrarfcn">NR-ARFCN</string>
    <string name="arfcn">Absolute RF Channel Number</string>
    <string name="bsic">Base Station Identity Code</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="cell_bands">Available Bands</string>
    <string name="csg_identity">Closed Subscriber Group - Identity</string>
    <string name="csg_restriction">CSG - Restriction</string>
    <string name="csg_hnb_name">CSG - Home Node B Name</string>
    <string name="plmn_list">Cell PLMN List</string>
    <string name="connection_status">Connection Status</string>
    <string name="cell_type">Cell Type</string>
    <string name="cpid">Cell Parameters ID</string>
    <string name="lte_rssi">Signal quality + CSQ</string>
    <string name="lte_rsrp">RSRP</string>
    <string name="lte_rsrq">RSRQ</string>
    <string name="lte_rssnr">RSSNR</string>
    <string name="lte_cqi">CQI</string>
    <string name="ta">TA</string>
    <string name="rssi">RSSI</string>
    <string name="rscp">RSCP</string>
    <string name="ber">Bit Error Rate</string>
    <string name="csi_rsrp">CSI-RSRP</string>
    <string name="csi_rsrq">CSI-RSRQ</string>
    <string name="csi_sinr">CSI-SINR</string>
    <string name="ss_rsrp">SS-RSRP</string>
    <string name="ss_rsrq">SS-RSRQ</string>
    <string name="ss_sinr">SS-SINR</string>
    <string name="ecio">ECIO</string>
    <string name="snr">SNR</string>
    <string name="asu">Arbitrary Signal Strength</string>
    <string name="sig_level">Signal Level</string>
    <string name="spn">Service Provider Name</string>
    <string name="network_gen">Network Generation</string>
    <string name="network_type">Network Type</string>
    <string name="voice_network_type">Voice Network Type</string>
    <string name="data_network_type">Data Network Type</string>
    <string name="data_state">Data Status</string>
    <string name="data_activity">Data Activity</string>
    <string name="country_iso">SIM Country Code</string>
    <string name="carrier_id">Carrier ID</string>
    <string name="sim_serial_number">Serial Number</string>
    <string name="imsi">IMSI</string>
    <string name="phone_number">Phone Number</string>
    <string name="voicemail_number">Voice Mail Number</string>
    <string name="tac">Type Allocation Code</string>
    <string name="manufacturer_code">Manufacturer Code</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="embedded">Is Embedded SIM</string>
    <string name="esim_supported">eSIM Supported</string>
    <string name="network_country_code">Country Code</string>
    <string name="data_enabled">Data Enabled</string>
    <string name="data_roaming_enabled">Data Roaming Enabled</string>
    <string name="forbidden_plmns">Forbidden PLMNs</string>
    <string name="service_state">Voice Service State</string>
    <string name="nr_status">5G Status</string>
    <string name="ends_status">E-UTRAN New Radio – Dual Connectivity</string>
    <string name="nr_frequency">5G Frequency Range</string>
    <string name="cell_bandwidths">LTE CA Bandwidths</string>
    <string name="duplex_mode">LTE CA Duplex Mode</string>
    <string name="lte_cal">Carrier Aggregation</string>
    <string name="cs_reject_cause">Network Reject Cause</string>
    <string name="simID">SIM Slot</string>
    <string name="export_data_description">Export data from your device in CSV file via email or using other 3rd party apps allowing sharing files.</string>
    <string name="export_watch_ad_description">Unlock free exports by watching a short video</string>
    <string name="earn_slot_btn_text">Get Reward</string>
    <string name="export_btn">Export</string>
    <string name="main_tab">Main</string>
    <string name="sat_tab">Satellites</string>
    <string name="nmea_tab">NMEA</string>
    <string name="tab_general">General</string>
    <string name="tab_camera">Camera</string>
    <string name="new_app">NEW APP</string>
    <string name="export_data_title">Export Data</string>
    <string name="export_available_title">Export Available</string>
    <string name="icmp_ping_ad">Check your connectivity with ICMP Ping.</string>
    <string name="earn_slot_ad_local">You can earn export slot by visiting Play Store</string>
    <string name="supported_picture_size">Supported Picture Size\n [width x height]</string>
    <string name="supported_video_size">Supported Video Size\n [width x height]</string>
    <string name="last_update">Last Update</string>
    <string name="start_logging">Start Logging</string>
    <string name="active_satellites">Active Satellites</string>
    <string name="azimuth">Azimuth</string>
    <string name="elevation">Elevation</string>
    <string name="type_in_your_feedback">Type in your feedback</string>
    <string name="send">SEND</string>
</resources>