<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_msg"
            android:textColor="@color/text_secondary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:orientation="horizontal">


        <Button
            android:id="@+id/noExit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/no_string"
            android:textAllCaps="true"
            android:textColor="@color/text_dialog_button"
            android:textSize="18sp" />

        <Button
            android:id="@+id/yesExit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_string"
            android:textAllCaps="true"
            android:textColor="@color/text_dialog_button"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>