<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/material_blue_grey_950"
            android:text="@string/send_feedback"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/feedbackMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="Type in your feedback"
            android:theme="@style/MyEditTextTheme"
            android:textCursorDrawable="@null"
            android:maxLines="3"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/noExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/material_deep_teal_500"
            android:layout_marginRight="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/no_string"/>

        <Button
            android:id="@+id/yesExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/material_deep_teal_500"
            android:text="@string/yes_string"/>

    </LinearLayout>


</LinearLayout>